--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.ts"
+    "start": "node dist/src/server.js",
+    "startdev":"nodemon src/server.ts" ,
+    "tsc": "./node_modules/typescript/bin/tsc",
+    "build": "tsc",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +16,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.13.0",
     "@types/validator": "^13.7.12",
     "nodemon": "^2.0.20",
@@ -22,8 +27,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "socket.io": "^4.6.0",
     "validator": "^13.9.0"
